Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7421

Incorrect header comments in /dll/win32/kernel32/client/actctx.c and thread.c, r59866

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • None
    • NTCore, Win32SS
    • None
    • 59,866

    Description

      /dll/win32/kernel32/client/thread.c, r59866 - header contains old (wrong) path to the file.
      /dll/win32/kernel32/client/actctx.c, r59866 - header is exactly the same as the header of the thread.c.

      Attachments

        Activity

          People

            bug zilla Bug Zilla
            ConductiveDielectric ConductiveDielectric
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: