[KERNEL32] Fix some headers information. CORE-7421 #resolve #comment Fixed in revision r59869, thanks :)

svn path=/trunk/; revision=59869